--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.11.1",
     "sqlite3": "^5.1.7"
   },
